# fastbuild-lsp

./: Cargo.toml  README.md
builtins/: alias.bff  linux.bff  macos.bff  windows.bff
queries/: function.scm  preprocessor.scm
src/: cache.rs  error.rs  helpers.rs  main.rs  parser_pool.rs  queries.rs
