[package]
name = "fastbuild-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
crossbeam-channel = "0.5.12"
dashmap = "5.5.3"
deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tree-sitter = "0.21.0"
tree-sitter-fastbuild = { path = "../tree-sitter-fastbuild" }
url = "2.5.0"
