[package]
name = "fastbuild-lsp"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
crossbeam-channel = "0.5.12"
dashmap = "5.5.3"
deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
futures = "0.3.30"
serde = "1.0.197"
serde_json = "1.0.114"
strum_macros = "0.26.4"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["io-std", "macros", "rt-multi-thread", "fs", "io-util"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tree-sitter = "0.21.0"
tree-sitter-fastbuild = { git = "https://github.com/pinbraerts/tree-sitter-fastbuild", branch = "main" }
url = "2.5.0"
